tests/error/enum_errors/bad_variant_def2.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    v1: int


MyEnum.compile()
